Revert "Merge branch 'main' of https://github.com/kurmangaliyev-a/zmk-sofle"
This reverts commit 739bdb5edde824d5d6cb58c847b08b88e899c23a, reversing
changes made to 710077eb99231e11f11a648f5c36ff42cfc1759a.

--- a/keymap-drawer/sofle.yaml
+++ b/keymap-drawer/sofle.yaml
@@ -94,9 +94,9 @@ layers:
   - {t: '=', s: +}
   - {t: '$$mdi:transfer$$', type: trans}
   - '~'
-  - $$mdi:bluetooth-off$$
-  - BT CLR ALL
-  - OUT BLE
+  - {t: '$$mdi:transfer$$', type: trans}
+  - {t: '$$mdi:transfer$$', type: trans}
+  - {t: '$$mdi:transfer$$', type: trans}
   - '&mkp MB5'
   - {t: '$$mdi:menu-left$$', s: '$$mdi:mouse$$'}
   - PG DN
